force-app/main/default/objects/AI_Classification_Rule__mdt/AI_Classification_Rule__mdt.object-meta.xml
<CustomObject>
    <label>AI Classification Rule</label>
    <pluralLabel>AI Classification Rules</pluralLabel>
</CustomObject>