force-app/main/default/objects/AI_Classification_Rule__mdt/fields/EU_AI_Act_Article__c.field-meta.xml
<CustomField>
    <fullName>EU_AI_Act_Article__c</fullName>
    <label>EU AI Act Article</label>
    <length>50</length>
    <type>Text</type>
</CustomField>