force-app/main/default/objects/AI_Classification_Rule__mdt/fields/Feature_Type__c.field-meta.xml
<CustomField>
    <fullName>Feature_Type__c</fullName>
    <label>Feature Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einstein Prediction</fullName>
            </value>
            <value>
                <fullName>Einstein Bot</fullName>
            </value>
            <value>
                <fullName>GenAI Function</fullName>
            </value>
            <value>
                <fullName>GenAI Planner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>