force-app/main/default/objects/AI_Classification_Rule__mdt/fields/Use_Case_Context__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Context__c</fullName>
    <label>Use Case Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>